--- a/src/modules/blog/components/RelatedPosts.astro
+++ b/src/modules/blog/components/RelatedPosts.astro
@@ -1,10 +1,10 @@
 ---
-import type { CollectionEntry } from "astro:content";
-import styles from "./RelatedPosts.module.css";
+import type { CollectionEntry } from 'astro:content';
+import styles from './RelatedPosts.module.css';
 
 interface Props {
-  currentPost: CollectionEntry<"blog">;
-  allPosts: CollectionEntry<"blog">[];
+  currentPost: CollectionEntry<'blog'>;
+  allPosts: CollectionEntry<'blog'>[];
 }
 
 const { currentPost, allPosts } = Astro.props;
@@ -51,24 +51,27 @@ const relatedPosts =
     : tagMatchedPosts.slice(0, 3);
 
 const formatDate = (date: Date) =>
-  date.toLocaleDateString("en-US", {
-    year: "numeric",
-    month: "long",
-    day: "numeric",
+  date.toLocaleDateString('en-US', {
+    year: 'numeric',
+    month: 'long',
+    day: 'numeric',
   });
 ---
 
 {
   relatedPosts.length > 0 && (
     <section class={styles.section} aria-labelledby="related-posts-heading">
-      <h2 id="related-posts-heading" class={styles.heading}>
+      <h2
+        id="related-posts-heading"
+        class:list={[styles.heading, 'u-heading-xl-semibold']}
+      >
         Related Posts
       </h2>
       <ul class={styles.list} role="list">
         {relatedPosts.map((post) => (
           <li class={styles.item}>
             <article class={styles.card}>
-              <h3 class={styles.title}>
+              <h3 class:list={[styles.title, 'u-heading-lg-semibold']}>
                 <a href={`/blog/${post.slug}`} class={styles.link}>
                   {post.data.title}
                 </a>
