--- a/src/modules/blog/components/RelatedPosts.astro
+++ b/src/modules/blog/components/RelatedPosts.astro
@@ -16,11 +16,7 @@ const otherPosts = allPosts.filter(
   (post) => post.slug !== currentPost.slug && !excludedSlugSet.has(post.slug),
 );
 
-const postsByRecency = [...otherPosts].sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
-
-const tagMatchedPosts = otherPosts
+const relatedPosts = otherPosts
   .map((post) => {
     const overlap = (post.data.tags ?? []).reduce(
       (count, tag) => (currentTagSet.has(tag) ? count + 1 : count),
@@ -37,22 +33,8 @@ const tagMatchedPosts = otherPosts
 
     return b.post.data.pubDate.valueOf() - a.post.data.pubDate.valueOf();
   })
-  .map(({ post }) => post);
-
-const relatedPosts =
-  tagMatchedPosts.length < 2
-    ? [
-        ...tagMatchedPosts,
-        ...postsByRecency
-          .filter(
-            (candidate) =>
-              !tagMatchedPosts.some(
-                (matched) => matched.slug === candidate.slug,
-              ),
-          )
-          .slice(0, 3 - tagMatchedPosts.length),
-      ].slice(0, 3)
-    : tagMatchedPosts.slice(0, 3);
+  .map(({ post }) => post)
+  .slice(0, 3);
 
 const formatDate = (date: Date) =>
   date.toLocaleDateString('en-US', {
