--- a/src/modules/blog/components/BlogPostItem.astro
+++ b/src/modules/blog/components/BlogPostItem.astro
@@ -1,13 +1,14 @@
 ---
-import PostCard from "./PostCard";
-import type { CollectionEntry } from "astro:content";
+import PostCard from './PostCard';
+import { isDraftVisible } from '../services/blogPosts';
+import type { CollectionEntry } from 'astro:content';
 
 interface Props {
-  post: CollectionEntry<"blog">;
+  post: CollectionEntry<'blog'>;
 }
 
 const { post } = Astro.props;
-const { title, description, pubDate, tags } = post.data;
+const { title, description, pubDate, tags, draft } = post.data;
 ---
 
 <PostCard
@@ -16,4 +17,5 @@ const { title, description, pubDate, tags } = post.data;
   description={description}
   pubDate={pubDate}
   tags={tags}
+  isDraft={isDraftVisible(draft)}
 />
